# AMAgent

./: .gitignore  AM_1construct_datasets.py  AM_2augment_datasets.py  AM_3clean_datasets.py  AM_4split_datasets.py  AM_RAG.py  AM_plot.py  AM_train_Cls.py  AM_train_Cls_csv.py  AM_train_Reg.py  AM_train_Reg_csv.py  README.md  benchmark_cls_AMagent_id.py  benchmark_cls_AMagent_ood.py  benchmark_cls_GPT5RAG.py  benchmark_cls_GPT5ZS.py  benchmark_cls_datadriven.py  benchmark_cls_datadriven_wSelection.py  pyproject.toml  run_mcp_server.py  user prompt.txt
AgentApp/: README.md  pyproject.toml  webui.py
AgentApp/app/: config.py  llm.py  ml_service.py
AgentApp/app/agent/: browser.py  swe.py
AgentApp/app/mcp/: server.py
AgentApp/app/prompt/: manus.py  mcp.py
AgentApp/app/tool/: classify_defect_material.py  knowledge_find_build_context.py  knowledge_retrieve_literature.py  mcp.py  perform_fusion_strategy.py  predict_melt_pool_material.py  str_replace_editor.py  task_canonicalize_param.py  task_extract_keywords.py  task_partition_param.py
AgentApp/config/: config.example.toml
AgentExperiments/: .gitignore  app_inspect.py  benchmark_cls_AMagent.py  benchmark_cls_AMagent_woFusion.py  benchmark_cls_LLM-ZS.py  benchmark_cls_datadriven_tf.py
AgentExperiments/corpus_AM/: IN718_IN625.json  SS316L_SS17.json  Ti-6Al-4V.json
AgentFTLLMs/: AM_LLM_cls.py  AM_LLM_cls_sc.py  AM_plot_loss.py
AgentFTLLMs/results/: all_experiments_summary.csv  all_experiments_summary_sc.csv
AgentFTLLMs/tasks/AM_defect_classification/: data_loader.py  data_preprocessor.py  data_preprocessor_sc.py  evaluater.py  evaluater_sc.py  model_finetuner.py  model_finetuner_sc.py  model_loader.py  model_loader_sc.py  task_data_loader.py
app/: logger.py  schema.py  webui.py
app/aas_utils/: aas_loader.py  basyx_client.py
app/agent/: base.py  manus.py  mcp.py  planning.py  toolcall.py
app/mcp/: server.py
app/prompt/: browser.py  mcp.py  toolcall.py
app/tool/: __init__.py  awaitNext.py  classify_defect_material.py  knowledge_find_build_context.py  knowledge_retrieve_literature.py  predict_melt_pool_material.py  task_partition_param.py
corpus_AM/: IN718_IN625.json  Meltpool dimension.json  SS316L_SS17.json  Ti-6Al-4V.json
data/: material_IN718_m.csv  material_IN718_m_completed.csv  material_SS17-4PH_m.csv  material_SS17-4PH_m_completed.csv  material_SS316L_m.csv  material_SS316L_m_completed.csv  material_Ti-6Al-4V_m.csv  material_Ti-6Al-4V_m_completed.csv
data_clean/: IN718_classification_clean.csv  SS17-4PH_classification_clean.csv  SS316L_classification_clean.csv  Ti-6Al-4V_classification_clean.csv
data_clean/archiv_clean from li/: IN718_classification_clean.csv  IN718_regression_clean.csv  SS17-4PH_classification_clean.csv  SS17-4PH_regression_clean.csv  SS316L_classification_clean.csv  SS316L_regression_clean.csv  Ti-6Al-4V_classification_clean.csv  Ti-6Al-4V_regression_clean.csv
data_exp/: Exp_ID_1_test.csv  Exp_ID_1_train.csv  Exp_ID_2_test.csv  Exp_ID_2_train.csv  Exp_ID_3_test.csv  Exp_ID_3_train.csv  Exp_ID_4_test.csv  Exp_ID_4_train.csv  Exp_OOD_1_test.csv  Exp_OOD_1_train.csv  Exp_OOD_2_test.csv  Exp_OOD_2_train.csv  Exp_OOD_3_test.csv  Exp_OOD_3_train.csv  Exp_OOD_4_test.csv  Exp_OOD_4_train.csv
data_exp/archiv_from li/: Exp_ID_1_test.csv  Exp_ID_1_train.csv  Exp_ID_2_test.csv  Exp_ID_2_train.csv  Exp_ID_3_test.csv  Exp_ID_3_train.csv  Exp_ID_4_test.csv  Exp_ID_4_train.csv  Exp_OOD_1_test.csv  Exp_OOD_1_train.csv  Exp_OOD_2_test.csv  Exp_OOD_2_train.csv  Exp_OOD_3_test.csv  Exp_OOD_3_train.csv  Exp_OOD_4_test.csv  Exp_OOD_4_train.csv
